--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>BIMchecker</title>
+        <title>BIMchecker1</title>
+        <!-- Favicon -->
+        <link rel="icon" type="image/x-icon" href="assets/img/Favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/img/Favicon.ico">
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
