--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>BIMchecker1</title>
+        <title>BIMchecker</title>
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="assets/img/Favicon.ico">
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/Favicon.ico">
