index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
    title="CDE = Common Data Environment. Gemeinsame Datenumgebung für alle Projektbeteiligten, z.B. BIM 360, Thinkproject oder Dalux."
    style="text-decoration: none; color: inherit; cursor: help;">
    <i class="fas fa-question-circle"></i>
-</a>-Plattformen wie BIM 360, Thinkproject oder Dalux. Durch die Koordination von Modellständen und Terminabläufen sowie die Moderation regelmäßiger Abstimmungen stelle ich sicher, dass alle Projektbeteiligten effizient und transparent zusammenarbeiten. Mein Ziel ist es, digitale Strukturen aufzubauen, die BIM im Projektalltag wirklich nutzbar machen.</p>
+</a>-Plattformen wie BIM 360. Durch die Koordination von Modellständen und Terminabläufen sowie die Moderation regelmäßiger Abstimmungen stelle ich sicher, dass alle Projektbeteiligten effizient und transparent zusammenarbeiten. Mein Ziel ist es, digitale Strukturen aufzubauen, die BIM im Projektalltag wirklich nutzbar machen.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fenster schließen</button>
                                 </div>
                             </div>
